<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make" />

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model" />

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color" />

    <TextView
        android:id="@+id/engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/engine" />

    <TextView
        android:id="@+id/transmission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transmission" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <Button
        android:id="@+id/firstButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_input_first_method"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/secondButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_input_second_method"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Result" />

</LinearLayout>